OpenApi-Shop improved
